# py_web_text_extractor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: patch_pydub.py
src/py_web_text_extractor/: __init__.py  cli.py  main.py
src/py_web_text_extractor/abstract/: __init__.py  extractor.py
src/py_web_text_extractor/exception/: __init__.py  exceptions.py
src/py_web_text_extractor/service/: __init__.py  extractor_service.py  markitdown_extractor.py  trafilatura_extractor.py
src/py_web_text_extractor/tools/: __init__.py  validation.py
tests/: conftest.py
tests/helpers/: server_manager.py
tests/resources/: complex.html  no_html.txt  simple.html
tests/service/: test_extractor_service.py  test_markitdown_extractor_integration.py  test_trafilatura_extractor_integration.py
tests/tools/: test_validation.py
