[project]
name = "py-web-text-extractor"
version = "0.1.0"
description = "Library-wrapper for extracting text from Web Pages"
readme = "README.md"
authors = [{ name = "Oleksandr Kostenko", email = "sanyokkua@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["markitdown>=0.0.2", "trafilatura>=2.0.0"]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "ruff>=0.15.0"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
dummy-variable-rgx = "^_$"

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented code)
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
]

[tool.ruff.format]
docstring-code-format = true
indent-style = 'space'
quote-style = "double"


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["py_web_text_extractor"]


# PYTEST
[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-ra", "-q", "--strict-markers", "--strict-config"]
markers = ["slow: marks tests as slow", "integration: marks integration tests"]
filterwarnings = ["error", "ignore::DeprecationWarning"]

# COVERAGE
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = ["**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
