[project]
name = "py-web-text-extractor"
version = "0.1.0"
description = "Library-wrapper for extracting text from Web Pages"
readme = "README.md"
authors = [{ name = "Oleksandr Kostenko", email = "sanyokkua@gmail.com" }]
requires-python = ">=3.14"
license = { text = "MIT" }
keywords = [
    "web",
    "text",
    "extraction",
    "scraping",
    "html",
    "markdown",
    "trafilatura",
    "markitdown",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = ["markitdown>=0.0.2", "trafilatura>=2.0.0", "typer>=0.12.0"]

[project.scripts]
py-web-text-extractor = "py_web_text_extractor.cli:app"

[project.urls]
Homepage = "https://github.com/sanyokkua/py_web_text_extractor"
Repository = "https://github.com/sanyokkua/py_web_text_extractor"
Issues = "https://github.com/sanyokkua/py_web_text_extractor/issues"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "ruff>=0.15.0"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
dummy-variable-rgx = "^_$"

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented code)
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
    "D",   # pydocstyle (docstring linting)
    "ANN", # flake8-annotations (type hints)
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR0913", # too many arguments
]

[tool.ruff.format]
docstring-code-format = true
indent-style = 'space'
quote-style = "double"


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "ARG",
    "PLR2004",
    "D",
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN401",
    "ANN204",
]
"**/__init__.py" = ["F401", "D104"]

[tool.ruff.lint.isort]
known-first-party = ["py_web_text_extractor"]

[tool.ruff.lint.pydocstyle]
convention = "google"


# PYTEST
[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-ra", "-q", "--strict-markers", "--strict-config"]
markers = ["slow: marks tests as slow", "integration: marks integration tests"]
filterwarnings = ["error", "ignore::DeprecationWarning"]

# COVERAGE
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = ["**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 80
show_missing = true
